fixed the appeals center alignment issue reported by Ketan

--- a/src/app/components/getting-reimbursed-page/appeals/appeals.component.scss
+++ b/src/app/components/getting-reimbursed-page/appeals/appeals.component.scss
@@ -55,35 +55,29 @@
     }
   }
 }
-.appeals-body {
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  @include padding(16px, 0, 64px, 0);
 
-  .appeals-content {
-    display: flex;
-    justify-content: left;
-    width: 1000px;
-    margin: auto;
-    flex-wrap: wrap;
-    .cust-width-title {
-      width: 961px;
-      font-family: 'UHCSans-SemiBold', Helvetica, Arial, sans-serif;
-      color: $black-rock;
-      margin-left: 10px;
-    }
-    .page-title {
-      flex-basis: 100%;
-      font-size: 36px;
-      @include padding(16px, 0, 20px, 0);
-      line-height: 40px;
-      font-family: 'UHCSans-SemiBold', Helvetica, Arial, sans-serif;
-    }
-    .filter-div {
-      overflow: auto;
-      line-height: 0;
-    }
+.appeals-content {
+  display: flex;
+  justify-content: left;
+  width: 1000px;
+  margin: auto;
+  flex-wrap: wrap;
+  .cust-width-title {
+    width: 961px;
+    font-family: 'UHCSans-SemiBold', Helvetica, Arial, sans-serif;
+    color: $black-rock;
+    margin-left: 10px;
+  }
+  .page-title {
+    flex-basis: 100%;
+    font-size: 36px;
+    @include padding(16px, 0, 20px, 0);
+    line-height: 40px;
+    font-family: 'UHCSans-SemiBold', Helvetica, Arial, sans-serif;
+  }
+  .filter-div {
+    overflow: auto;
+    line-height: 0;
   }
 }
 
